LPS-78620 Build lang

--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_ar.properties
@@ -16,6 +16,7 @@ no-toolbar-items=لا توجد عناصر شريط الأدوات (Automatic Tra
 overwrite-existing-entries=الكتابة فوق إدخالات القائمة (Automatic Translation)
 rename-fragment=قم بإعادة تسمية الجزء (Automatic Translation)
 show-toolbar=إظهار شريط الأدوات (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=لا يمكن حذف الإدخال جزء لأنه مطلوب بواسطة قوالب صفحة واحدة أو أكثر. (Automatic Translation)
 there-are-no-collections=وهناك لا مجموعات. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=وهناك لا مجموعات. يمكنك إضافة مجموعة بواسطة النقر فوق الزر زائد في أسفل الزاوية اليمنى. (Automatic Translation)
