--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_bg.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Няма елементи (Automatic Translation)
 overwrite-existing-entries=Замести съществуващите записи (Automatic Translation)
 rename-fragment=Преименуване на фрагмент (Automatic Translation)
 show-toolbar=Покажи лентата с инструменти (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Фрагмент записът не може да бъде изтрит, защото това се изисква от един или повече шаблони за страница. (Automatic Translation)
 there-are-no-collections=Има няма колекции. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Има няма колекции. Можете да добавяте колекция като щракнете върху бутона плюс в долния десен ъгъл. (Automatic Translation)
