--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_cs.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Žádné položky panelu nástrojů (Automatic Translation)
 overwrite-existing-entries=Přepsat existující položky (Automatic Translation)
 rename-fragment=Přejmenovat Fragment (Automatic Translation)
 show-toolbar=Zobrazit panel nástrojů (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragment položka nemůže být odstraněna, protože to vyžaduje jeden nebo více šablon stránek. (Automatic Translation)
 there-are-no-collections=Neexistují žádné kolekce. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Neexistují žádné kolekce. Kolekce můžete přidat klepnutím na tlačítko plus v pravém dolním rohu. (Automatic Translation)
