--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_es.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Ningún elemento de la barra de herramientas (Automatic Transla
 overwrite-existing-entries=Sobrescribir las entradas existentes (Automatic Translation)
 rename-fragment=Cambiar el nombre de fragmento (Automatic Translation)
 show-toolbar=Mostrar barra de herramientas (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=La entrada de fragmento no se puede eliminar porque es necesaria para una o más plantillas de página. (Automatic Translation)
 there-are-no-collections=Hay no hay colecciones. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Hay no hay colecciones. Puede Agregar una colección haciendo clic en el botón más en la esquina inferior derecha. (Automatic Translation)
