--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_fa.properties
@@ -16,6 +16,7 @@ no-toolbar-items=هیچ موردی در نوار ابزار (Automatic Translati
 overwrite-existing-entries=نوشته های موجود را رونویسی (Automatic Translation)
 rename-fragment=تغییر نام قطعه (Automatic Translation)
 show-toolbar=نمایش نوار ابزار (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=ورود قطعه را نمی توان حذف کرد زیرا یک یا چند صفحه قالب مورد نیاز است. (Automatic Translation)
 there-are-no-collections=هیچ مجموعه ای وجود دارد. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=هیچ مجموعه ای وجود دارد. با کلیک کردن روی دکمه به علاوه در گوشه پایین سمت راست می توانید از مجموعه اضافه کنید. (Automatic Translation)
