--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_fr.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Aucun élément de la barre d’outils (Automatic Translation)
 overwrite-existing-entries=Remplacer les entrées existantes (Automatic Translation)
 rename-fragment=Renommez le Fragment (Automatic Translation)
 show-toolbar=Voir la barre d’outils (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Impossible de supprimer l’entrée de fragment car elle est requise par un ou plusieurs modèles de page. (Automatic Translation)
 there-are-no-collections=Il n’y a aucune collection. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Il n’y a aucune collection. Vous pouvez ajouter une collection en cliquant sur le bouton "+" sur le coin inférieur droit. (Automatic Translation)
