--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_hu.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Nincs szerszámosláda cikk (Automatic Translation)
 overwrite-existing-entries=Felülírja a meglévő bejegyzések (Automatic Translation)
 rename-fragment=Nevezze át a töredék (Automatic Translation)
 show-toolbar=Eszköztár megjelenítése (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=A töredék bejegyzés nem törölhető, mert ez szükséges egy vagy több oldal sablonok. (Automatic Translation)
 there-are-no-collections=Vannak nem gyűjtemények. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Vannak nem gyűjtemények. Kattintson a plusz gombra a jobb alsó sarokban a gyűjtemény is hozzáadhat. (Automatic Translation)
