--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_in.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Tidak ada item Toolbar (Automatic Translation)
 overwrite-existing-entries=Menimpa entri (Automatic Translation)
 rename-fragment=Mengubah nama fragmen (Automatic Translation)
 show-toolbar=Perlihatkan Toolbar (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Entri fragmen yang tidak dapat dihapus karena dibutuhkan oleh satu atau lebih halaman template. (Automatic Translation)
 there-are-no-collections=Ada tidak ada koleksi. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Ada tidak ada koleksi. Anda dapat menambahkan koleksi dengan mengklik tombol plus di sudut kanan bawah. (Automatic Translation)
