--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_lt.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Įrankių juostos elementų (Automatic Translation)
 overwrite-existing-entries=Perrašyti esamus įrašus (Automatic Translation)
 rename-fragment=Pervardyti fragmentas (Automatic Translation)
 show-toolbar=Rodyti įrankių juostą (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Įrašo fragmentas panaikinti negalima, nes tai yra reikalaujama pagal vieną ar daugiau šablonus. (Automatic Translation)
 there-are-no-collections=Šiuo metu nėra kolekcijos. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Šiuo metu nėra kolekcijos. Kolekcija galite pridėti spustelėdami pliuso mygtuką apatiniame dešiniajame kampe. (Automatic Translation)
