--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_nb.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Ingen verktøylinjeelementer (Automatic Translation)
 overwrite-existing-entries=Overskrive eksisterende oppføringer (Automatic Translation)
 rename-fragment=Endre Fragment (Automatic Translation)
 show-toolbar=Vis verktøylinje (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragment posten kan ikke slettes fordi det kreves av én eller flere sidemaler. (Automatic Translation)
 there-are-no-collections=Det finnes ingen samlinger. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Det finnes ingen samlinger. Du kan legge til en samling ved å klikke på pluss-knappen på nederst til høyre. (Automatic Translation)
