--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_pl.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Brak elementów paska narzędzi (Automatic Translation)
 overwrite-existing-entries=Zastąpienie istniejących wpisów (Automatic Translation)
 rename-fragment=Zmień nazwę Fragment (Automatic Translation)
 show-toolbar=Pokaż pasek narzędzi (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragment wpisu nie można usunąć, ponieważ jest to wymagane przez jeden lub więcej szablonów stron. (Automatic Translation)
 there-are-no-collections=Istnieją żadne kolekcje. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Istnieją żadne kolekcje. Kolekcja można dodać, klikając przycisk ze znakiem plus w prawym dolnym rogu. (Automatic Translation)
