--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_pt_PT.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Não há itens de barra de ferramentas (Automatic Translation)
 overwrite-existing-entries=Substituir as entradas existentes (Automatic Translation)
 rename-fragment=Rename Fragment (Automatic Copy)
 show-toolbar=Mostrar barra de ferramentas (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=A entrada do fragmento não pode ser excluída porque é exigido por um ou mais modelos de página. (Automatic Translation)
 there-are-no-collections=There are no collections. (Automatic Copy)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Não há nenhum coleções. Você pode adicionar uma coleção clicando no botão mais no canto inferior direito. (Automatic Translation)
