--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_ru.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Нет элементов панели инструментов
 overwrite-existing-entries=Перезаписать существующие записи (Automatic Translation)
 rename-fragment=Переименование фрагментов (Automatic Translation)
 show-toolbar=Показать панель инструментов (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Фрагмента записи нельзя удалить, поскольку он требуется один или несколько шаблонов страниц. (Automatic Translation)
 there-are-no-collections=Существует нет коллекций. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Существует нет коллекций. Коллекцию можно добавить, нажав кнопку «плюс» в правом нижнем углу. (Automatic Translation)
