--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_sk.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Žiadne položky panela s nástrojmi (Automatic Translation)
 overwrite-existing-entries=Prepísať existujúce položky (Automatic Translation)
 rename-fragment=Premenovať Fragment (Automatic Translation)
 show-toolbar=Zobraziť panel s nástrojmi (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragment položka sa nedá odstrániť, pretože to vyžaduje jeden alebo viacero šablón stránok. (Automatic Translation)
 there-are-no-collections=Neexistujú žiadne kolekcie. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Neexistujú žiadne kolekcie. Kolekcia môžete pridať kliknutím na tlačidlo plus na pravom dolnom rohu. (Automatic Translation)
