--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_sl.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Ni elementov v orodni vrstici (Automatic Translation)
 overwrite-existing-entries=Prepisovanje obstoječih vnosov (Automatic Translation)
 rename-fragment=Preimenovati Fragment (Automatic Translation)
 show-toolbar=Pokaži orodno vrstico (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragment vnosa ni mogoče izbrisati, ker to zahteva eno ali več strani predloge. (Automatic Translation)
 there-are-no-collections=Obstajajo ne zbirke. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Obstajajo ne zbirke. Zbirka lahko dodate tako, da kliknete gumb plus v spodnjem desnem kotu. (Automatic Translation)
