--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_th.properties
@@ -16,6 +16,7 @@ no-toolbar-items=ไม่มีแถบเครื่องมือราย
 overwrite-existing-entries=เขียนทับรายการที่มีอยู่ (Automatic Translation)
 rename-fragment=เปลี่ยนชื่อส่วน (Automatic Translation)
 show-toolbar=แสดงแถบเครื่องมือ (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=ไม่สามารถลบรายการส่วนเนื่องจากมันถูกต้องตามแม่แบบมากกว่า หนึ่ง (Automatic Translation)
 there-are-no-collections=มีคอลเลกชันไม่ (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=มีคอลเลกชันไม่ คุณสามารถเพิ่มคอลเลกชัน โดยการคลิกปุ่มบวกบนมุมขวาล่าง (Automatic Translation)
