--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_tr.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Araç çubuğunda öğe yok (Automatic Translation)
 overwrite-existing-entries=Varolan girdilerin üzerine (Automatic Translation)
 rename-fragment=Bölümü yeniden adlandırma (Automatic Translation)
 show-toolbar=Araç çubuğunu göster (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Bir veya daha fazla sayfa şablonları tarafından gerekli olduğu parça girdi silinemez. (Automatic Translation)
 there-are-no-collections=Koleksiyon vardır. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Koleksiyon vardır. Bir koleksiyonu sağ alt köşedeki üzerinde artı düğmesini tıklatarak ekleyebilirsiniz. (Automatic Translation)
