--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_uk.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Немає елементів панелі інструмент
 overwrite-existing-entries=Перезаписати наявні записи (Automatic Translation)
 rename-fragment=Перейменувати фрагмент (Automatic Translation)
 show-toolbar=Показати панель інструментів (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Фрагмент елемент неможливо видалити, оскільки вона потрібна один або кілька шаблонів сторінок. (Automatic Translation)
 there-are-no-collections=Там не немає колекцій. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Там не немає колекцій. Колекція можна додати, натиснувши кнопку плюс в нижньому правому куті. (Automatic Translation)
