--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_vi.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Không có mục thanh công cụ (Automatic Translation)
 overwrite-existing-entries=Ghi đè lên các mục hiện tại (Automatic Translation)
 rename-fragment=Đổi tên đoạn (Automatic Translation)
 show-toolbar=Hiển thị thanh công cụ (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Nhập đoạn không thể bị xoá vì nó là yêu cầu của một hoặc nhiều trang mẫu. (Automatic Translation)
 there-are-no-collections=Không có không có bộ sưu tập. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Không có không có bộ sưu tập. Bạn có thể thêm một bộ sưu tập bằng cách nhấn vào nút cộng trên góc dưới bên phải. (Automatic Translation)
