--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_zh_CN.properties
@@ -16,6 +16,7 @@ no-toolbar-items=无工具栏项 (Automatic Translation)
 overwrite-existing-entries=覆盖现有条目 (Automatic Translation)
 rename-fragment=重命名片段 (Automatic Translation)
 show-toolbar=显示工具栏 (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=无法删除片段条目, 因为一个或多个页面模板需要它。 (Automatic Translation)
 there-are-no-collections=没有集合。 (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=没有收藏。您可以通过单击右下角的加号按钮添加集合。 (Automatic Translation)
