--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_et.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Άhtegi tööriistariba (Automatic Translation)
 overwrite-existing-entries=Olemasolevad kanded üle (Automatic Translation)
 rename-fragment=Nimeta Fragment (Automatic Translation)
 show-toolbar=Kuva tööriistariba (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragment kirjet ei saa kustutada, kuna see on vajalik lehekülje malle. (Automatic Translation)
 there-are-no-collections=Esineb komplekte. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Esineb komplekte. Kogumik lisamiseks klõpsake plussmärgiga nuppu all paremas nurgas. (Automatic Translation)
