--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_hr.properties
@@ -16,6 +16,7 @@ no-toolbar-items=No Toolbar Items (Automatic Copy)
 overwrite-existing-entries=Overwrite Existing Entries (Automatic Copy)
 rename-fragment=Rename Fragment (Automatic Copy)
 show-toolbar=Show Toolbar (Automatic Copy)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=The fragment entry cannot be deleted because it is required by one or more page templates. (Automatic Copy)
 there-are-no-collections=There are no collections. (Automatic Copy)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=There are no collections. You can add a collection by clicking the plus button on the bottom right corner. (Automatic Copy)
