--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_it.properties
@@ -16,6 +16,7 @@ no-toolbar-items=Nessun elemento di barra degli strumenti (Automatic Translation
 overwrite-existing-entries=Sovrascrivere le voci esistenti (Automatic Translation)
 rename-fragment=Rinominare il frammento (Automatic Translation)
 show-toolbar=Mostra barra degli strumenti (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=La voce di frammento non può essere eliminata perché è richiesto da uno o più modelli di pagina. (Automatic Translation)
 there-are-no-collections=Non sono presenti raccolte. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=Non sono presenti raccolte. È possibile aggiungere una raccolta facendo clic sul pulsante più in basso a destra. (Automatic Translation)
