--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_ko.properties
@@ -16,6 +16,7 @@ no-toolbar-items=도구 모음 항목 없음 (Automatic Translation)
 overwrite-existing-entries=기존 항목 덮어쓰기 (Automatic Translation)
 rename-fragment=조각 이름 바꾸기 (Automatic Translation)
 show-toolbar=도구 모음 표시 (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=하나 이상의 페이지 서식 파일에 필요한 때문에 조각 항목을 삭제할 수 없습니다. (Automatic Translation)
 there-are-no-collections=없는 컬렉션을 확인 하 고 있습니다. (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=없는 컬렉션을 확인 하 고 있습니다. 오른쪽 하단 모서리에 있는 더하기 버튼을 클릭 하 여 컬렉션을 추가할 수 있습니다. (Automatic Translation)
