--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language_zh_TW.properties
@@ -16,6 +16,7 @@ no-toolbar-items=無工具列項 (Automatic Translation)
 overwrite-existing-entries=覆蓋現有條目 (Automatic Translation)
 rename-fragment=重命名片段 (Automatic Translation)
 show-toolbar=顯示工具列 (Automatic Translation)
+the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=無法刪除片段條目, 因為一個或多個頁面範本需要它。 (Automatic Translation)
 there-are-no-collections=沒有集合。 (Automatic Translation)
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=沒有收藏。您可以通過按一下右下角的加號按鈕添加集合。 (Automatic Translation)
